--- a/sistema/librerias/formato.css
+++ b/sistema/librerias/formato.css
@@ -63,6 +63,14 @@
 	font-size: 14px;
 	font-weight: normal;
 }
+.subtitulo3{
+	color: #006FBA;
+	font-size: 14px;
+	font-weight: normal;
+	border-top: 0px #fff;
+	border-left: 0px #fff;
+	border-right: 0px #fff;
+}
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*									estilo de la letra en una seccion										*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -197,6 +205,13 @@
 	width: 400px;
 	margin-left: auto;
 	margin-right: auto;
+}
+.sublin{
+	text-align: center;
+	border-bottom: solid 1px #000;
+}
+.sinsublin{	
+	border-bottom: solid 1px #fff;
 }
 /*	fondo con inputs modificables	*/
 .fondo{
